# Bohmian

./: .gitignore  CLAIM_STATUS_MATRIX.md  GR_QM_A001_CLOSURE_NOTE_2026-03-02.md  GR_QM_ACTION_PLAN.md  GR_QM_ANSATZ_PROBE_CARD_2026-03-23.md  GR_QM_ASTROPY_BACKGROUND_VALIDATION_NOTE_2026-03-05.md  GR_QM_CGRQM002_CLOSURE_NOTE_2026-03-05.md  GR_QM_CGRQM002_GOVERNANCE_DECISION_PACKAGE_2026-03-05.md  GR_QM_CGRQM002_RK_FAMILY_MINIPACK_NOTE_2026-03-05.md  GR_QM_CLIFF_MECHANISM_PREDICTIONS_PREREG_2026-03-03.md  GR_QM_CONSECUTIVE_CYCLE_PROMOTION_LEDGER.csv  GR_QM_CONSECUTIVE_CYCLE_PROMOTION_LEDGER.md  GR_QM_CWDW001_FALSIFICATION_PROTOCOL.md  GR_QM_CWDW001_SYMBOLIC_DERIVATION_RECEIPT_2026-03-05.md  GR_QM_CYCLE3_CLOSE_NOTE.md  GR_QM_CYCLE3_PLAN.md  GR_QM_CYCLE_JOURNAL.md  GR_QM_EDGE305_ACCEPTANCE_CRITERIA_PREREGISTER.md  GR_QM_EDGE_BOUNDARY_SWEEP_2026-03-08.md  GR_QM_EDGE_INTEGRATOR_HIERARCHY_NOTE_2026-03-03.md  GR_QM_EXECUTION_LOG_8H.md  GR_QM_EXTERNAL_CRITIQUE_RESPONSE_2026-03-03.md  GR_QM_HARDENING_EXPANSION_PLAN_2026-03-03.md  GR_QM_KPI_SNAPSHOT_2026-03-05.md  GR_QM_LEDGER_NOTE_EDGE_MITIGATION_FILLED_2026-03-03.md  GR_QM_LQC_PROBE_NOTE_2026-03-08_v2.md  GR_QM_MONTHLY_GATE_REPORT_01.md  GR_QM_MONTHLY_GATE_REPORT_01_DRAFT.md  GR_QM_NEXT_CYCLE_TRIGGER_LIST_2026-03-03.md  GR_QM_NULL_TEST_LOG.md  GR_QM_NUMERICS_PROTOCOL.md  GR_QM_PROCESS_DEBT_AND_FIXES_2026-03-06.md  GR_QM_PROMOTION_READINESS_NOTE_2026-03-02.md  GR_QM_QUESTIONS_Q1.md  GR_QM_QUICK_REVERT_NOTE_2026-03-02.md  GR_QM_REPLICATION_REPORT_V1.md  GR_QM_SESSION_NOTE_2026-03-02.md  GR_QM_SYMBOLIC_VALIDATION_NOTE_2026-03-05.md  (+9 more)
(+244 files in other folders)
